autocomplete: fix wrapping for suggestions with spaces

--- a/res/css/ui.css
+++ b/res/css/ui.css
@@ -40,16 +40,15 @@
 	display:block;
 	padding:.2em .4em;
 	line-height:1.5;
-
 	zoom:1;
 }
+
 .ui-menu .ui-menu-item ,
 .ui-menu .ui-menu-item a.ui-state-active {
 	font-weight: normal;
 	margin: -1px;
+	white-space: nowrap;
 }
-
-
 
 .ui-helper-hidden-accessible{
 	position:fixed;
